fix: замечания ревьювера