@@ -1,11 +1,12 @@
 package ru.practicum.explore.main.event.service;
 
+import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 import ru.practicum.explore.main.category.model.Category;
 import ru.practicum.explore.main.category.repository.CategoryRepository;
 import ru.practicum.explore.main.event.dto.EventFullDto;
@@ -15,14 +16,19 @@ import ru.practicum.explore.main.event.dto.UpdateEventAdminRequest;
 import ru.practicum.explore.main.event.dto.UpdateEventUserRequest;
 import ru.practicum.explore.main.event.mapper.EventMapper;
 import ru.practicum.explore.main.event.model.Event;
+import ru.practicum.explore.main.event.model.EventState;
 import ru.practicum.explore.main.event.model.FilterSort;
+import ru.practicum.explore.main.event.model.UpdateEventAdminState;
+import ru.practicum.explore.main.event.model.UpdateEventUserState;
 import ru.practicum.explore.main.event.repository.EventCriteriaRepository;
 import ru.practicum.explore.main.event.repository.EventRepository;
 import ru.practicum.explore.main.exceptions.BaseException;
 import ru.practicum.explore.main.exceptions.NotFoundException;
+import ru.practicum.explore.main.exceptions.NotFoundType;
 import ru.practicum.explore.main.rating.dto.EventRatingsDto;
 import ru.practicum.explore.main.rating.service.RatingService;
 import ru.practicum.explore.main.request.model.Request;
+import ru.practicum.explore.main.request.model.RequestStatus;
 import ru.practicum.explore.main.request.repository.RequestRepository;
 import ru.practicum.explore.main.user.model.User;
 import ru.practicum.explore.main.user.repository.UserRepository;
@@ -41,6 +47,8 @@ import static ru.practicum.explore.main.event.model.FilterSort.VIEWS;
 
 @Slf4j
 @Service
+@RequiredArgsConstructor
+@Transactional(readOnly = true)
 public class EventService {
     private final EventRepository eventRepository;
     private final EventCriteriaRepository eventCriteriaRepository;
@@ -52,29 +60,13 @@ public class EventService {
     private final DateTimeFormatter returnedTimeFormat = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss");
     private final StatsClient statsClient;
 
-    @Autowired
-    public EventService(EventRepository eventRepository,
-                        EventCriteriaRepository eventCriteriaRepository,
-                        UserRepository userRepository,
-                        CategoryRepository categoryRepository,
-                        RequestRepository requestRepository,
-                        EventMapper eventMapper,
-                        RatingService ratingService,
-                        StatsClient statsClient) {
-        this.eventRepository = eventRepository;
-        this.eventCriteriaRepository = eventCriteriaRepository;
-        this.userRepository = userRepository;
-        this.categoryRepository = categoryRepository;
-        this.requestRepository = requestRepository;
-        this.eventMapper = eventMapper;
-        this.ratingService = ratingService;
-        this.statsClient = statsClient;
-    }
-
+    @Transactional
     public EventFullDto createEvent(Long userId, NewEventDto newEvent) {
         log.info("Создание нового события userId={}, event={}", userId, newEvent);
-        User initiator = userRepository.findById(userId).orElseThrow(() -> new NotFoundException(NotFoundException.NotFoundType.USER, userId));
-        Category stored = categoryRepository.findById(newEvent.getCategory()).orElseThrow(() -> new NotFoundException(NotFoundException.NotFoundType.CATEGORY, newEvent.getCategory()));
+        User initiator = userRepository.findById(userId).orElseThrow(() ->
+                new NotFoundException(NotFoundType.USER, userId));
+        Category stored = categoryRepository.findById(newEvent.getCategory()).orElseThrow(() ->
+                new NotFoundException(NotFoundType.CATEGORY, newEvent.getCategory()));
         Event newEventEntity = creatingNewEvent(newEvent, initiator, stored);
         return eventMapper.toEventFullDto(eventRepository.save(newEventEntity));
     }
@@ -82,23 +74,30 @@ public class EventService {
     public List<EventShortDto> getEventsByUserId(Long userId, int from, int size) {
         log.info("Получение информации о событиях пользователем userId={}", userId);
         Pageable pageable = PageRequest.of(from / size, size);
-        userRepository.findById(userId).orElseThrow(() -> new NotFoundException(NotFoundException.NotFoundType.USER, userId));
+        userRepository.findById(userId).orElseThrow(() ->
+                new NotFoundException(NotFoundType.USER, userId));
         return eventRepository.findAllByInitiatorId(userId, pageable).stream()
                 .map(eventMapper::toEventShortDto)
-                .map(eventShortDto -> eventMapper.toEventShortDto(ratingService.getEventRatings(eventShortDto.getId()), eventShortDto))
+                .map(eventShortDto -> eventMapper.toEventShortDto(ratingService.getEventRatings(eventShortDto.getId()),
+                        eventShortDto))
                 .collect(Collectors.toList());
     }
 
     public EventFullDto getEventsByUserAndEventId(Long userId, Long eventId) {
         log.info("Получение информации о событии пользователем");
-        userRepository.findById(userId).orElseThrow(() -> new NotFoundException(NotFoundException.NotFoundType.USER, userId));
-        Event stored = eventRepository.findById(eventId).orElseThrow(() -> new NotFoundException(NotFoundException.NotFoundType.EVENT, eventId));
-        return eventMapper.toEventFullDto(ratingService.getEventRatings(stored.getId()), eventMapper.toEventFullDto(stored));
+        userRepository.findById(userId).orElseThrow(() -> new NotFoundException(NotFoundType.USER,
+                userId));
+        Event stored = eventRepository.findById(eventId).orElseThrow(() ->
+                new NotFoundException(NotFoundType.EVENT, eventId));
+        return eventMapper.toEventFullDto(ratingService.getEventRatings(stored.getId()),
+                eventMapper.toEventFullDto(stored));
     }
 
+    @Transactional
     public EventFullDto updateEventsByUser(Long userId, Long eventId, UpdateEventUserRequest updateEventUserRequest) {
         log.info("Обновление события пользователем");
-        Event stored = eventRepository.findById(eventId).orElseThrow(() -> new NotFoundException(NotFoundException.NotFoundType.EVENT, eventId));
+        Event stored = eventRepository.findById(eventId).orElseThrow(() ->
+                new NotFoundException(NotFoundType.EVENT, eventId));
         checkUpdateWithStateByUser(userId, updateEventUserRequest, stored);
         return eventMapper.toEventFullDto(eventRepository.save(createUserUpdateEvent(stored, updateEventUserRequest)));
     }
@@ -107,7 +106,7 @@ public class EventService {
         if (!stored.getInitiator().getId().equals(userId)) {
             throw new BaseException("Условия выполнения не соблюдены", "Изменять может только владелец");
         }
-        if (stored.getState().equals(Event.State.PUBLISHED)) {
+        if (stored.getState().equals(EventState.PUBLISHED)) {
             throw new BaseException("Условия выполнения не соблюдены", "Изменять можно неопубликованные события");
         }
         LocalDateTime borderTime = LocalDateTime.now().plusHours(2);
@@ -120,19 +119,23 @@ public class EventService {
         }
     }
 
+    @Transactional
     public EventFullDto updateEventsByAdmin(Long eventId, UpdateEventAdminRequest updateEventAdminRequest) {
         log.info("Обновление события eventId={}, event={}", eventId, updateEventAdminRequest);
-        Event stored = eventRepository.findById(eventId).orElseThrow(() -> new NotFoundException(NotFoundException.NotFoundType.EVENT, eventId));
+        Event stored = eventRepository.findById(eventId).orElseThrow(() ->
+                new NotFoundException(NotFoundType.EVENT, eventId));
         checkUpdateWithState(stored, updateEventAdminRequest);
-        return eventMapper.toEventFullDto(eventRepository.save(createAdminUpdateEvent(stored, updateEventAdminRequest)));
+        return eventMapper.toEventFullDto(eventRepository.save(createAdminUpdateEvent(stored,
+                updateEventAdminRequest)));
     }
 
     private void checkUpdateWithState(Event stored, UpdateEventAdminRequest updateEventAdminRequest) {
-        if (!Objects.equals(Event.State.PENDING, stored.getState())) {
+        if (!Objects.equals(EventState.PENDING, stored.getState())) {
             throw new BaseException("Условия выполнения не соблюдены", "Изменять можно неопубликованные события");
         }
         if (stored.getEventDate().isBefore(LocalDateTime.now().plusHours(1))) {
-            throw new BaseException("Неверно указана дата события", "Дата события не может быть менее чем за 1 час до начала");
+            throw new BaseException("Неверно указана дата события",
+                    "Дата события не может быть менее чем за 1 час до начала");
         }
         if (updateEventAdminRequest.getEventDate() != null) {
             if (updateEventAdminRequest.getEventDate().isBefore(LocalDateTime.now())) {
@@ -141,11 +144,12 @@ public class EventService {
         }
     }
 
+    @Transactional
     public EventFullDto getEventById(Long id, HttpServletRequest request) {
         log.info("Получение информации о событии eventId={}", id);
-        Event stored = eventRepository.findByIdAndState(id, Event.State.PUBLISHED);
+        Event stored = eventRepository.findByIdAndState(id, EventState.PUBLISHED);
         if (stored == null) {
-            throw new NotFoundException(NotFoundException.NotFoundType.EVENT, id);
+            throw new NotFoundException(NotFoundType.EVENT, id);
         }
         statsClient.saveHit("explore-main", request.getRequestURI(), request.getRemoteAddr());
         stored.setViews(stored.getViews() + 1);
@@ -175,8 +179,9 @@ public class EventService {
                 .collect(Collectors.toList());
     }
 
-    public List<EventFullDto> getEventsForAdmin(List<Long> users, List<Event.State> states, List<Long> categories,
-                                                LocalDateTime rangeStart, LocalDateTime rangeEnd, Integer from, Integer size) {
+    public List<EventFullDto> getEventsForAdmin(List<Long> users, List<EventState> states, List<Long> categories,
+                                                LocalDateTime rangeStart, LocalDateTime rangeEnd, Integer from,
+                                                Integer size) {
         log.info("Получение информации о событиях с фильтрами admin");
         Pageable pageable = PageRequest.of(from / size, size, Sort.by(Sort.Direction.ASC, "id"));
         log.info("Получение информации о событиях с фильтрами admin из репозиория");
@@ -195,12 +200,12 @@ public class EventService {
             Category newCategory = categoryRepository.findById(updateEventAdminRequest.getCategory()).get();
             updEventWithoutState.setCategory(newCategory);
         }
-        if (Objects.equals(UpdateEventAdminRequest.State.PUBLISH_EVENT, updateEventAdminRequest.getStateAction())) {
-            updEventWithoutState.setState(Event.State.PUBLISHED);
+        if (Objects.equals(UpdateEventAdminState.PUBLISH_EVENT, updateEventAdminRequest.getStateAction())) {
+            updEventWithoutState.setState(EventState.PUBLISHED);
             updEventWithoutState.setPublishedOn(LocalDateTime.now());
         }
-        if (Objects.equals(UpdateEventAdminRequest.State.REJECT_EVENT, updateEventAdminRequest.getStateAction())) {
-            updEventWithoutState.setState(Event.State.CANCELED);
+        if (Objects.equals(UpdateEventAdminState.REJECT_EVENT, updateEventAdminRequest.getStateAction())) {
+            updEventWithoutState.setState(EventState.CANCELED);
         }
         return updEventWithoutState;
     }
@@ -211,11 +216,11 @@ public class EventService {
             Category newCategory = categoryRepository.findById(updateEventUserRequest.getCategory()).get();
             updEventWithoutState.setCategory(newCategory);
         }
-        if (Objects.equals(UpdateEventUserRequest.State.SEND_TO_REVIEW, updateEventUserRequest.getStateAction())) {
-            updEventWithoutState.setState(Event.State.PENDING);
+        if (Objects.equals(UpdateEventUserState.SEND_TO_REVIEW, updateEventUserRequest.getStateAction())) {
+            updEventWithoutState.setState(EventState.PENDING);
         }
-        if (Objects.equals(UpdateEventUserRequest.State.CANCEL_REVIEW, updateEventUserRequest.getStateAction())) {
-            updEventWithoutState.setState(Event.State.CANCELED);
+        if (Objects.equals(UpdateEventUserState.CANCEL_REVIEW, updateEventUserRequest.getStateAction())) {
+            updEventWithoutState.setState(EventState.CANCELED);
         }
         return updEventWithoutState;
     }
@@ -225,10 +230,10 @@ public class EventService {
                 statsClient.getStats(eventFullDto.getCreatedOn().format(returnedTimeFormat),
                         LocalDateTime.now().format(returnedTimeFormat),
                         List.of("/events/" + eventFullDto.getId()), true);
-        if (stat.size() > 0) {
-            eventFullDto.setViews(stat.get(0).getHits());
+        if (!stat.isEmpty()) {
+            eventFullDto.setViews(stat.getFirst().getHits());
         }
-        List<Request> confirmedRequests = requestRepository.findAllByStatusAndEventId(Request.RequestStatus.CONFIRMED,
+        List<Request> confirmedRequests = requestRepository.findAllByStatusAndEventId(RequestStatus.CONFIRMED,
                 eventFullDto.getId());
         eventFullDto.setConfirmedRequests(confirmedRequests.size());
         EventRatingsDto eventRatingsDto = ratingService.getEventRatings(eventFullDto.getId());
@@ -238,7 +243,7 @@ public class EventService {
     private Event creatingNewEvent(NewEventDto newEvent, User user, Category category) {
         return new Event(null, newEvent.getAnnotation(), category, LocalDateTime.now(), newEvent.getDescription(),
                 newEvent.getEventDate(), user, newEvent.getLocation(), newEvent.getPaid(), newEvent.getParticipantLimit(),
-                true, null, newEvent.getRequestModeration(), Event.State.PENDING,
+                true, null, newEvent.getRequestModeration(), EventState.PENDING,
                 newEvent.getTitle(), 0L, 0L);
     }
 }
